syntax = "proto3";

option csharp_namespace = "GrpcSample";

service Greeter {
    rpc Greet (GreetRequest) returns (GreetReply);
    rpc GreetForAdmin (GreetRequest) returns (GreetReply);
}

message GreetRequest {
    string name = 1;
}

message GreetReply {
    string message = 1;
}
